[package]
name = "player"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
chrono = { version = "0.4.41", features = ["serde"] }
dotenv = "0.15.0"
fern = "0.7.1"
humantime = "2.2.0"
jsonwebtoken = "9.3.1"
log = "0.4.27"
prost = "0.13"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "chrono"] }
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
tonic = "0.12"
tower-http = "0.6.6"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tungstenite = "0.27.0"

[build-dependencies]
tonic-build = "0.12"
